<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TerminosActivity"
    android:layout_margin="20dp"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        android:elevation="8dp"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/red_800"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/title_terms_and_conditions"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/title"
                    android:textSize="26dp">

                </TextView>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="right"
                android:text="@string/text_paragraph_1"
                android:textSize="16dp">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_margin="10dp"
                android:layout_gravity="right"
                android:text="@string/subtítulo_uno"
                android:textSize="16dp">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="right"
                android:text="@string/text_paragraph_one"
                android:textSize="16dp">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="right"
                android:text="@string/text_paragraph_two"
                android:textSize="16dp">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="right"
                android:text="@string/text_paragraph_three"
                android:textSize="16dp">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="right"
                android:text="@string/text_paragraph_four"
                android:textSize="16dp">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_margin="10dp"
                android:layout_gravity="right"
                android:text="@string/subtitle_two"
                android:textSize="16dp">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="right"
                android:text="@string/text_paragraph_five"
                android:textSize="16dp">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="right"
                android:text="@string/text_paragraph_six"
                android:textSize="16dp">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="right"
                android:text="@string/text_paragraph_seven"
                android:textSize="16dp">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="right"
                android:text="@string/subtitle_three"
                android:textSize="16dp">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="right"
                android:text="@string/text_paragraph_eight"
                android:textSize="16dp">

            </TextView>

            <Button
                android:id="@+id/btn_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_term"
                android:onClick="@">
            </Button>

           </LinearLayout>



    </androidx.cardview.widget.CardView>

    </ScrollView>
